<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
   android:background="@drawable/bc_fon_main"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="580dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >


    <ImageView
        android:id="@+id/imge"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/ic_anima"
        android:layout_marginTop="58dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_guess"
        app:layout_constraintBottom_toTopOf="@+id/bv_button1"
        tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ic_bacr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_line_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />



    <TextView
        android:id="@+id/tv_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_guess"
        android:textSize="32sp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toTopOf="@+id/ic_bacr"
        android:layout_marginTop="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/bv_button1"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:textSize="28sp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#FF5722"
        app:layout_constraintBottom_toTopOf="@+id/btn_v"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imge"
        tools:targetApi="lollipop" />
    <Button
        android:id="@+id/btn_v"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textSize="30sp"
        android:backgroundTint="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/bv_button1"
        tools:targetApi="lollipop" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>